--- a/Длительность-установки-сборок.css
+++ b/Длительность-установки-сборок.css
@@ -1,10 +1,10 @@
  .u-section-1 {
-  background-image: url("images/backgr.png");
+  background-image: url("images/background.png");
   background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1565px;
+  min-height: 1194px;
 }
 
 .u-section-1 .u-text-1 {
@@ -13,79 +13,52 @@
 }
 
 .u-section-1 .u-text-2 {
-  font-size: 1.6875rem;
-  margin: -96px 0 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 20px 0 0;
-}
-
-.u-section-1 .u-text-4 {
-  margin: -25px 0 0;
-}
-
-.u-section-1 .u-text-5 {
   margin: 29px 0 0;
 }
 
+.u-section-1 .u-text-4 {
+  margin: 2px 0 0;
+}
+
+.u-section-1 .u-text-5 {
+  margin: 49px 0 0;
+}
+
 .u-section-1 .u-text-6 {
-  margin: 2px 0 0;
-}
-
-.u-section-1 .u-text-7 {
-  margin: -125px 0 0;
-}
-
-.u-section-1 .u-text-8 {
-  margin: 49px 0 0;
-}
-
-.u-section-1 .u-text-9 {
-  margin: 2px 0 0;
-}
-
-.u-section-1 .u-text-10 {
-  margin: 49px 0 0;
-}
-
-.u-section-1 .u-text-11 {
   margin: 20px 0 0;
 }
 
-.u-section-1 .u-text-12 {
+.u-section-1 .u-text-7 {
   margin: 49px 0 0;
 }
 
-.u-section-1 .u-text-13 {
-  margin: 20px 0 60px;
+.u-section-1 .u-text-8 {
+  margin: 20px 0 29px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1565px;
+  }
+
+  .u-section-1 .u-text-3 {
     width: auto;
     margin-top: 71px;
   }
 
-  .u-section-1 .u-text-6 {
-    width: auto;
-  }
-
-  .u-section-1 .u-text-8 {
-    width: auto;
-  }
-
-  .u-section-1 .u-text-9 {
+  .u-section-1 .u-text-4 {
     width: auto;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
-    font-size: 1.5rem;
-  }
-
-  .u-section-1 .u-text-2 {
     font-size: 1.5rem;
   }
 }
