--- a/Информация-о-сборках.css
+++ b/Информация-о-сборках.css
@@ -1,10 +1,10 @@
  .u-section-1 {
-  background-image: url("images/backgr.png");
+  background-image: url("images/background.png");
   background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 100vh;
+  min-height: 1000px;
 }
 
 .u-section-1 .u-text-1 {
