--- a/Как-обойти-проверку-Windows-11.css
+++ b/Как-обойти-проверку-Windows-11.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: url("images/backgr.png");
+  background-image: url("images/background.png");
   background-position: 50% 50%;
 }
 
