--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -1,21 +1,20 @@
  .u-section-1 {
   background-image: url("images/img19_1920x1200.jpg");
   background-position: 50% 50%;
-  background-size: 115%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 100vh;
+  min-height: 623px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 76px 0 0;
+  margin: 50px 0 0;
 }
 
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 40px auto 0 575px;
+  margin: 64px auto 0 575px;
   padding: 10px 25px 10px 24px;
 }
 
@@ -69,103 +68,75 @@
 }
 
 .u-section-1 .u-btn-9 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 9px auto 0 577px;
-  padding: 10px 18px 10px 17px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 9px auto 0 332px;
+  padding: 10px 32px 10px 31px;
 }
 
 .u-section-1 .u-btn-10 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 334px;
-  padding: 10px 50px 10px 49px;
-}
-
-.u-section-1 .u-btn-11 {
-  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
   background-image: none;
-  margin: 9px auto 60px;
-  padding: 10px 153px 10px 152px;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: -45px 333px 60px auto;
+  padding: 10px 50px 10px 49px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 675px;
+    min-height: 514px;
   }
 
   .u-section-1 .u-text-1 {
     width: auto;
-    margin-top: 64px;
-    margin-left: 17px;
-    margin-right: 17px;
+    margin-left: auto;
+    margin-right: 33px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: 213px;
+    margin-right: 230px;
     margin-left: auto;
-    padding-right: 23px;
-    padding-left: 22px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 248px;
+    margin-left: 231px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 248px;
+    margin-left: 231px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-right: 214px;
-    margin-left: auto;
-    padding-right: 35px;
-    padding-left: 35px;
+    margin-left: 479px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 248px;
+    margin-left: 231px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-right: 214px;
-    margin-left: auto;
-    padding-right: 37px;
-    padding-left: 37px;
+    margin-left: 479px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-right: 213px;
-    margin-left: auto;
-    padding-right: 19px;
-    padding-left: 19px;
+    margin-left: 480px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-left: 248px;
+    margin-left: 231px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-right: 214px;
-    margin-left: auto;
-    padding-right: 17px;
-    padding-left: 16px;
+    margin-left: 132px;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-left: 248px;
-    padding-right: 51px;
-    padding-left: 50px;
-  }
-
-  .u-section-1 .u-btn-11 {
-    margin-right: 214px;
-    padding: 9px 156px 11px;
+    margin-right: 133px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 620px;
+    min-height: 394px;
   }
 
   .u-section-1 .u-text-1 {
@@ -174,8 +145,7 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 25px;
-    margin-right: 128px;
+    margin-right: 129px;
   }
 
   .u-section-1 .u-btn-2 {
@@ -188,6 +158,7 @@
 
   .u-section-1 .u-btn-4 {
     margin-right: 130px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
@@ -196,10 +167,12 @@
 
   .u-section-1 .u-btn-6 {
     margin-right: 130px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-7 {
     margin-right: 130px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-8 {
@@ -207,39 +180,21 @@
   }
 
   .u-section-1 .u-btn-9 {
-    margin-right: 130px;
+    margin-left: 0;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-left: 122px;
-  }
-
-  .u-section-1 .u-btn-11 {
     margin-right: 0;
-    margin-left: 122px;
-    padding-right: 152px;
-    padding-left: 150px;
   }
 }
 
 @media (max-width: 767px) {
-   .u-section-1 {
-    background-size: auto 115%;
-  }
-
   .u-section-1 .u-sheet-1 {
-    min-height: 722px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 16px;
-    margin-left: 0;
-    margin-right: 0;
+    min-height: 296px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 11px;
-    margin-right: 34px;
+    margin-right: auto;
     margin-left: 278px;
   }
 
@@ -270,91 +225,42 @@
   .u-section-1 .u-btn-8 {
     margin-left: 31px;
   }
-
-  .u-section-1 .u-btn-9 {
-    margin-right: 32px;
-  }
-
-  .u-section-1 .u-btn-10 {
-    margin-left: 30px;
-  }
-
-  .u-section-1 .u-btn-11 {
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 157px;
-    padding-bottom: 10px;
-    padding-left: 156px;
-  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 895px;
-  }
-
-  .u-section-1 .u-text-1 {
-    margin-top: 31px;
-    margin-left: 24px;
-    margin-right: 24px;
+    min-height: 186px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 24px;
     margin-left: auto;
-    margin-right: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 10px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: 10px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: 10px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 10px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: 10px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-top: 65px;
     margin-right: auto;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-top: -100px;
     margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-9 {
-    margin-top: 120px;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-btn-10 {
-    margin-top: -100px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-11 {
-    margin-top: 100px;
-    margin-bottom: 45px;
-    padding-right: 78px;
-    padding-bottom: 11px;
-    padding-left: 76px;
   }
 }
