--- a/Содержимое-сборок.css
+++ b/Содержимое-сборок.css
@@ -1,10 +1,10 @@
  .u-section-1 {
-  background-image: url("images/backgr.png");
+  background-image: url("images/background.png");
   background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 3402px;
+  min-height: 3404px;
 }
 
 .u-section-1 .u-image-1 {
@@ -14,7 +14,7 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: -246px 28px 0 auto;
+  margin: -245px 23px 0 auto;
 }
 
 .u-section-1 .u-image-2 {
